// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

// XXX retaining package to avoid breaking existing configurations.
package foundation.runtime.kubernetes;

option go_package = "namespacelabs.dev/foundation/internal/runtime/kubernetes/client";

import "framework/kubernetes/kubeclient/staticconfig.proto";

message HostEnv {
    string                                                  kubeconfig            = 1;
    string                                                  context               = 2;  // If empty, uses default context.
    bool                                                    incluster             = 3;
    string                                                  bearer_token_provider = 4;
    string                                                  provider              = 5;  // If set, relies on the specified provider to produce a kube config.
    foundation.framework.kubernetes.kubeclient.StaticConfig static_config         = 6;
}
