// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package languages.nodejs.testdata.services.postuser;

message PostUserRequest {
    string user_name = 1;
}

message PostUserResponse {
    string output = 1;
}

service PostUserService {
    // grpcurl -plaintext -import-path languages/nodejs/testdata/services/postuser -proto service.proto -d '{"user_name":"Bob"}' 127.0.0.1:40000 languages.nodejs.testdata.services.postuser.PostUserService/GetUserPosts
    //
    // {
    //   "output": "Response: Input: Bob"
    // }
    rpc GetUserPosts(PostUserRequest) returns (PostUserResponse);
}
